feat: add close and cancel event (F-2.5) (#30)
